finish the first section

--- a/index.html
+++ b/index.html
@@ -6,11 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Workshop TeachMeSkills Front End</title>
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="web__container">
       <section class="web__header">
-        <!-- NAVIGATION -->
+        <!-- 1 SECTION - NAVIGATION -->
 
         <div class="web__header-navigation">
           <nav class="web__header-left">
@@ -20,16 +32,16 @@
             <div class="web__header-menu">
               <ul class="web__header-menu-list">
                 <li class="web__header-menu-item">
-                  <a href="" class="web__header-menu-link">Product</a>
+                  <a href="/" class="web__header-menu-link">Product</a>
                 </li>
                 <li class="web__header-menu-item">
-                  <a href="" class="web__header-menu-link">Home</a>
+                  <a href="/" class="web__header-menu-link">Home</a>
                 </li>
                 <li class="web__header-menu-item">
-                  <a href="" class="web__header-menu-link">Pricing</a>
+                  <a href="/" class="web__header-menu-link">Pricing</a>
                 </li>
                 <li class="web__header-menu-item">
-                  <a href="" class="web__header-menu-link">Contact</a>
+                  <a href="/" class="web__header-menu-link">Contact</a>
                 </li>
               </ul>
             </div>
@@ -42,6 +54,7 @@
             </button>
           </div>
         </div>
+        <!-- 1 SECTION - CONTENT -->
         <div class="web__header-content">
           <div class="web__header-content-text">
             <div class="web__header-content-info">
@@ -57,7 +70,9 @@
               Learn More
             </button>
           </div>
-          <div class="web__header-content-jpg"></div>
+          <div class="web__header-content-jpg">
+            <img src="./images/1.jpg" alt="Smiling student holding books." />
+          </div>
         </div>
       </section>
     </div>
