giving sections flexboxes

--- a/index.html
+++ b/index.html
@@ -20,61 +20,85 @@
     />
   </head>
   <body>
-    <div class="web__container">
-      <section class="web__header">
-        <!-- 1 SECTION - NAVIGATION -->
+    <body>
+      <div class="web__container">
+        <section class="web__header">
+          <!-- 1 SECTION - NAVIGATION -->
 
-        <div class="web__header-navigation">
-          <nav class="web__header-left">
-            <div class="web__header-logo">
-              <a class="web__header-logo-link" href="/">Brandname</a>
+          <div class="web__header-navigation">
+            <nav class="web__header-left">
+              <div class="web__header-logo">
+                <a class="web__header-logo-link" href="/">Brandname</a>
+              </div>
+              <div class="web__header-menu">
+                <ul class="web__header-menu-list">
+                  <li class="web__header-menu-item">
+                    <a href="/" class="web__header-menu-link">Product</a>
+                  </li>
+                  <li class="web__header-menu-item">
+                    <a href="/" class="web__header-menu-link">Home</a>
+                  </li>
+                  <li class="web__header-menu-item">
+                    <a href="/" class="web__header-menu-link">Pricing</a>
+                  </li>
+                  <li class="web__header-menu-item">
+                    <a href="/" class="web__header-menu-link">Contact</a>
+                  </li>
+                </ul>
+              </div>
+            </nav>
+            <div class="web__header-right">
+              <a class="web__header-auth-link">Login</a>
+              <button class="web__header-btn web__header-btn--primary">
+                <span>Join us</span>
+              </button>
             </div>
-            <div class="web__header-menu">
-              <ul class="web__header-menu-list">
-                <li class="web__header-menu-item">
-                  <a href="/" class="web__header-menu-link">Product</a>
-                </li>
-                <li class="web__header-menu-item">
-                  <a href="/" class="web__header-menu-link">Home</a>
-                </li>
-                <li class="web__header-menu-item">
-                  <a href="/" class="web__header-menu-link">Pricing</a>
-                </li>
-                <li class="web__header-menu-item">
-                  <a href="/" class="web__header-menu-link">Contact</a>
-                </li>
-              </ul>
-            </div>
-          </nav>
+          </div>
 
-          <div class="web__header-right">
-            <a class="web__header-auth-link">Login</a>
-            <button class="web__header-btn web__header-btn--primary">
-              <span>Join us</span>
-            </button>
-          </div>
-        </div>
-        <!-- 1 SECTION - CONTENT -->
-        <div class="web__header-content">
-          <div class="web__header-content-text">
-            <div class="web__header-content-info">
-              <h5>Join Us</h5>
-              <h1>HIGH QUALITY COURSES</h1>
-              <h4>
-                Every day brings with it a fresh set of learning possibilities.
-              </h4>
+          <!-- 1 SECTION - CONTENT -->
+          <div class="web__header-content">
+            <div class="web__header-content-text">
+              <div class="web__header-content-info">
+                <h5>Join Us</h5>
+                <h1>HIGH QUALITY COURSES</h1>
+                <h4>
+                  Every day brings with it a fresh set of learning
+                  possibilities.
+                </h4>
+              </div>
+              <div class="web__header-content-actions"></div>
+              <button class="web__header-btn">Join Us</button>
+              <button class="web__header-btn web__header-btn--transparent">
+                Learn More
+              </button>
             </div>
-            <div class="web__header-content-actions"></div>
-            <button class="web__header-btn">Join Us</button>
-            <button class="web__header-btn web__header-btn--transparent">
-              Learn More
-            </button>
+            <div class="web__header-content-jpg">
+              <img src="./images/1.jpg" alt="Smiling student holding books." />
+            </div>
           </div>
-          <div class="web__header-content-jpg">
-            <img src="./images/1.jpg" alt="Smiling student holding books." />
+        </section>
+        <section class="web__video">
+          <div class="web__video-text">
+            <h6>Practice Advice</h6>
+            <h3>Our Popular Courses</h3>
+            <p>
+              Problems trying to resolve the conflict between <br />
+              the two major realms of Classical physics: Newtonian mechanics
+            </p>
           </div>
-        </div>
-      </section>
-    </div>
+          <div class="web__video-video">
+            <img
+              class="web__video-video-jpg"
+              src="./images/3.jpg"
+              alt="Cup of tea and office tools on table."
+            />
+          </div>
+        </section>
+        <section class="web__popular-courses"></section>
+        <section class="web__client-matters"></section>
+        <section class="web__subscription"></section>
+        <section class="web__footer"></section>
+      </div>
+    </body>
   </body>
 </html>
