corrections plus  section nr 3

--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
       <div class="web__container">
         <section class="web__header">
           <!-- 1 SECTION - NAVIGATION -->
-
           <div class="web__header-navigation">
             <nav class="web__header-left">
               <div class="web__header-logo">
@@ -54,7 +53,6 @@
               </button>
             </div>
           </div>
-
           <!-- 1 SECTION - CONTENT -->
           <div class="web__header-content">
             <div class="web__header-content-text">
@@ -78,23 +76,43 @@
           </div>
         </section>
         <section class="web__video">
+          <!-- 2 SECTION - TEXT -->
           <div class="web__video-text">
             <h6>Practice Advice</h6>
             <h3>Our Popular Courses</h3>
             <p>
-              Problems trying to resolve the conflict between <br />
-              the two major realms of Classical physics: Newtonian mechanics
+              Problems trying to resolve the conflict between the two major
+              realms of <br />Classical physics: Newtonian mechanics
             </p>
           </div>
-          <div class="web__video-video">
+          <!-- 2 SECTION - VIDEO -->
+          <div class="web__video-card">
             <img
-              class="web__video-video-jpg"
+              class="web__video-card-jpg"
               src="./images/3.jpg"
               alt="Cup of tea and office tools on table."
             />
           </div>
         </section>
-        <section class="web__popular-courses"></section>
+        <section class="web__courses">
+          <!-- 3 SECTION - JPG -->
+          <div class="web__courses-jpg">
+            <img
+              src="./images/3.jpg"
+              alt="Cup of tea and office tools on table."
+            />
+          </div>
+          <!-- 3 SECTION - TEXT -->
+          <div class="web__courses-text">
+            <div class="web__courses-text-line"></div>
+            <h2>Our Popular Courses</h2>
+            <p>
+              Problems trying to resolve the conflict between the two major
+              realms of Classical physics: Newtonian mechanics
+            </p>
+            <h6>Learn More</h6>
+          </div>
+        </section>
         <section class="web__client-matters"></section>
         <section class="web__subscription"></section>
         <section class="web__footer"></section>
