--- a/index.html
+++ b/index.html
@@ -115,7 +115,47 @@
         </section>
         <section class="web__client-matters"></section>
         <section class="web__subscription"></section>
-        <section class="web__footer"></section>
+        <!-- FOOTER -->
+        <section class="web__footer">
+          <div class="web__footer-box">
+            <div class="web__footer-column">
+              <h5>Company Info</h5>
+              <ul>
+                <li><a href="/">About Us</a></li>
+                <li><a href="/">Carrier</a></li>
+                <li><a href="/">We are hiring</a></li>
+                <li><a href="/">Blog</a></li>
+              </ul>
+            </div>
+            <div class="web__footer-column">
+              <h5>Legal</h5>
+              <ul>
+                <li><a href="/">About Us</a></li>
+                <li><a href="/">Carrier</a></li>
+                <li><a href="/">We are hiring</a></li>
+                <li><a href="/">Blog</a></li>
+              </ul>
+            </div>
+            <div class="web__footer-column">
+              <h5>Features</h5>
+              <ul>
+                <li><a href="/">Business Marketing</a></li>
+                <li><a href="/">User Analytic</a></li>
+                <li><a href="/">Live Chat</a></li>
+                <li><a href="/">Unlimited Support</a></li>
+              </ul>
+            </div>
+            <div class="web__footer-column">
+              <h5>Resources</h5>
+              <ul>
+                <li><a href="/">IOS & Android</a></li>
+                <li><a href="/">Watch a Demo</a></li>
+                <li><a href="/">Customers</a></li>
+                <li><a href="/">API</a></li>
+              </ul>
+            </div>
+          </div>
+        </section>
       </div>
     </body>
   </body>
