--- a/index.html
+++ b/index.html
@@ -114,7 +114,24 @@
           </div>
         </section>
         <section class="web__client-matters"></section>
-        <section class="web__subscription"></section>
+        <!-- 5 SECTION - TEXT -->
+        <section class="web__subscription">
+          <div class="web__subscription-text">
+            <h6>Newsletter</h6>
+            <h3>Video in Live Action</h3>
+            <p>
+              Problems trying to resolve the conflict between<br />
+              the two major realms of Classical physics: Newtonian mechanics
+            </p>
+          </div>
+          <!-- 5 SECTION - FORM -->
+          <div class="web__subscription-form">
+            <form action="#">
+              <input type="text" placeholder="Your Email" />
+              <button type="submit">Subscribe</button>
+            </form>
+          </div>
+        </section>
         <!-- FOOTER -->
         <section class="web__footer">
           <div class="web__footer-box">
