4 section and improvement

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <body>
@@ -71,7 +75,10 @@
               </button>
             </div>
             <div class="web__header-content-jpg">
-              <img src="./images/1.jpg" alt="Smiling student holding books." />
+              <img
+                src="https://dc607.4shared.com/img/ICyTF1Nyiq/s24/18350125fc8/hero-cover-1?async&rand=0.6076418984358563"
+                alt="Smiling student girl holding books."
+              />
             </div>
           </div>
         </section>
@@ -81,16 +88,16 @@
             <h6>Practice Advice</h6>
             <h3>Our Popular Courses</h3>
             <p>
-              Problems trying to resolve the conflict between the two major
-              realms of <br />Classical physics: Newtonian mechanics
+              Problems trying to resolve the conflict between <br />the two
+              major realms of Classical physics: Newtonian mechanics
             </p>
           </div>
           <!-- 2 SECTION - VIDEO -->
           <div class="web__video-card">
             <img
               class="web__video-card-jpg"
-              src="./images/3.jpg"
-              alt="Cup of tea and office tools on table."
+              src="https://dc607.4shared.com/img/qZBxuwYLea/s24/18350125fc8/features-11-video-thumb?async&rand=0.2519105958843748"
+              alt="Colored pencils in a container."
             />
           </div>
         </section>
@@ -98,8 +105,8 @@
           <!-- 3 SECTION - JPG -->
           <div class="web__courses-jpg">
             <img
-              src="./images/3.jpg"
-              alt="Cup of tea and office tools on table."
+              src="https://dc780.4shared.com/img/Rz4KpTLuea/s24/18350159be8/thumb-concept-14?async&rand=0.23796635235029084"
+              alt="Happy student girl holding notebooks and pen."
             />
           </div>
           <!-- 3 SECTION - TEXT -->
@@ -113,7 +120,94 @@
             <h6>Learn More</h6>
           </div>
         </section>
-        <section class="web__client-matters"></section>
+        <!-- 4 SECTION - TEXT-->
+        <section class="web__client-matters">
+          <div class="web__client-matters-text">
+            <h6>Practice Advice</h6>
+            <h2>Every Client Matters</h2>
+            <p>
+              Problems trying to resolve the conflict between <br />
+              the two major realms of Classical physics: Newtonian mechanics
+            </p>
+          </div>
+          <!-- 4 SECTION - SERVICES-->
+          <div class="web__client-matters-box">
+            <div class="web__client-matters-box-column">
+              <div class="web__client-matters-box-column-photo">
+                <img
+                  src="https://s3-alpha-sig.figma.com/img/49a8/7c76/3c73dd52172aae4f8fd131799805ac11?Expires=1678060800&Signature=ONPAY4YeevvUsdvagDGeUAd1COp8rkR4FV83xIOu4fgNHg6kAsmCtivzykQ6CoI6kfScZ9pB3NOS0jQwvuGkkcozdx6Z3CDh88x3sngoYY0evHHYFZIw5TpfHYzlaFkKyqmcGlRylwIpZWXE8s6nVrYXrAS7Nk3kDO2HfWzwTseiLDDSOTcfQMYKhUBZjLBp1YRif9GOzjArwpezwFisJQ7CabxKy6~G9RZcg1ECRqujzWT~4TG9cH14JXqRsdKoUJfaEU02StFNFvGjEERDH2FS6SlgXSntY83utPOgIM~9pKuylYHSvTBpfaWPIB-iiy~kmbmoEc8W1~lXJCJP4g__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4"
+                  alt="Colored pencils arranged in a circle."
+                />
+                <div class="web__client-matters-box-column-photo-tag">
+                  <h6>Sale</h6>
+                </div>
+              </div>
+              <div class="web__client-matters-box-column-text">
+                <div class="web__client-matters-box-column-text-frame">
+                  <a href="/">Books Liberary</a>
+                  <span
+                    ><h1>&#9733;</h1>
+                    4.9</span
+                  >
+                </div>
+                <h5>Get Quality <br />Education</h5>
+                <p>
+                  We focus on ergonomics and meeting <br />
+                  you where you work. It's only a <br />
+                  keystroke away.
+                </p>
+                <div class="web__client-matters-box-column-text-sale">
+                  <span class="fa-regular fa-arrow-down-to-bracket"></span>15
+                  Sales
+                </div>
+                <div class="web__client-matters-box-column-text-price">
+                  $16.48
+                  <span>$6.48</span>
+                </div>
+                <div class="web__client-matters-box-column-text-button">
+                  <h6>Learn More <span> ></span></h6>
+                </div>
+              </div>
+            </div>
+            <div class="web__client-matters-box-column">
+              <div class="web__client-matters-box-column-photo">
+                <img
+                  src="https://s3-alpha-sig.figma.com/img/26bc/d337/4ee1cde079f04555acc010c67f60927a?Expires=1678060800&Signature=VHx3IKg9rYXEKs6~i1GB97ur~XUzipeMkOrFZ8P~apx18Skya-kwAe6M8jG5Zy7iEOjzg9Q1BK3cVCX1lzcdPskPPuAuD3gyuKV2WlrA9yTNMCPPBScsc4dQlCxMrWzbBoLkzV5l~B4-T~W8pr8OgXbyotKr6YH0WE8DrNUvlurTg5PyjPw2B~ums3sqGolVpzLpylGwOLpWuk6KMwgx2wYoVUvoFtJ4sh42upjm9z--CoFcmktIGkDDofQq3vtK10v~Zhs0b07bfK2g5X1vp3uoV6D1OnSzeHEFQcAVlnC4oXGBfMRDVV4uPHLwCOR8bb-dSMTDSqjbicBYhJJPpA__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4"
+                  alt="Yellow-blue painting with yellow crayon."
+                />
+                <div class="web__client-matters-box-column-photo-tag">
+                  <h6>Sale</h6>
+                </div>
+              </div>
+              <div class="web__client-matters-box-column-text">
+                <div class="web__client-matters-box-column-text-frame">
+                  <a href="/">Training Courses</a>
+                  <span
+                    ><h1>&#9733;</h1>
+                    4.9</span
+                  >
+                </div>
+                <h5>Video in Live <br />Action</h5>
+                <p>
+                  We focus on ergonomics and meeting <br />
+                  you where you work. It's only a <br />
+                  keystroke away.
+                </p>
+                <div class="web__client-matters-box-column-text-sale">
+                  <span class="fa-regular fa-arrow-down-to-bracket"></span>15
+                  Sales
+                </div>
+                <div class="web__client-matters-box-column-text-price">
+                  $16.48
+                  <span>$6.48</span>
+                </div>
+                <div class="web__client-matters-box-column-text-button">
+                  <h6>Learn More <span> ></span></h6>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
         <!-- 5 SECTION - TEXT -->
         <section class="web__subscription">
           <div class="web__subscription-text">
