--- a/index.html
+++ b/index.html
@@ -163,8 +163,7 @@
                   keystroke away.
                 </p>
                 <div class="web__client-matters-box-column-text-sale">
-                  <span class="fa-regular fa-arrow-down-to-bracket"></span>15
-                  Sales
+                  <i class="fa-solid fa-download"></i>15 Sales
                 </div>
                 <div class="web__client-matters-box-column-text-price">
                   $16.48
