--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             </div>
             <div class="web__header-content-jpg">
               <img
-                src="https://dc607.4shared.com/img/ICyTF1Nyiq/s24/18350125fc8/hero-cover-1?async&rand=0.6076418984358563"
+                src="./jpg/1.jpg"
                 alt="Smiling student girl holding books."
               />
             </div>
@@ -99,7 +99,7 @@
           <div class="web__video-card">
             <img
               class="web__video-card-jpg"
-              src="https://dc607.4shared.com/img/qZBxuwYLea/s24/18350125fc8/features-11-video-thumb?async&rand=0.2519105958843748"
+              src="./jpg/2.jpg"
               alt="Colored pencils in a container."
             />
             <div class="web__video-card-button">
@@ -111,7 +111,7 @@
           <!-- 3 SECTION - JPG -->
           <div class="web__courses-jpg">
             <img
-              src="https://dc780.4shared.com/img/Rz4KpTLuea/s24/18350159be8/thumb-concept-14?async&rand=0.23796635235029084"
+              src="./jpg/3.jpg"
               alt="Happy student girl holding notebooks and pen."
             />
           </div>
@@ -141,7 +141,7 @@
             <div class="web__client-matters-box-column">
               <div class="web__client-matters-box-column-photo">
                 <img
-                  src="https://s3-alpha-sig.figma.com/img/49a8/7c76/3c73dd52172aae4f8fd131799805ac11?Expires=1678060800&Signature=ONPAY4YeevvUsdvagDGeUAd1COp8rkR4FV83xIOu4fgNHg6kAsmCtivzykQ6CoI6kfScZ9pB3NOS0jQwvuGkkcozdx6Z3CDh88x3sngoYY0evHHYFZIw5TpfHYzlaFkKyqmcGlRylwIpZWXE8s6nVrYXrAS7Nk3kDO2HfWzwTseiLDDSOTcfQMYKhUBZjLBp1YRif9GOzjArwpezwFisJQ7CabxKy6~G9RZcg1ECRqujzWT~4TG9cH14JXqRsdKoUJfaEU02StFNFvGjEERDH2FS6SlgXSntY83utPOgIM~9pKuylYHSvTBpfaWPIB-iiy~kmbmoEc8W1~lXJCJP4g__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4"
+                  src="./jpg/4.jpg"
                   alt="Colored pencils arranged in a circle."
                 />
                 <div class="web__client-matters-box-column-photo-tag">
@@ -150,7 +150,7 @@
               </div>
               <div class="web__client-matters-box-column-text">
                 <div class="web__client-matters-box-column-text-frame">
-                  <a href="/">Books Liberary</a>
+                  <a href="/">Books Library</a>
                   <span
                     ><h1>&#9733;</h1>
                     4.9</span
@@ -177,7 +177,7 @@
             <div class="web__client-matters-box-column">
               <div class="web__client-matters-box-column-photo">
                 <img
-                  src="https://s3-alpha-sig.figma.com/img/26bc/d337/4ee1cde079f04555acc010c67f60927a?Expires=1678060800&Signature=VHx3IKg9rYXEKs6~i1GB97ur~XUzipeMkOrFZ8P~apx18Skya-kwAe6M8jG5Zy7iEOjzg9Q1BK3cVCX1lzcdPskPPuAuD3gyuKV2WlrA9yTNMCPPBScsc4dQlCxMrWzbBoLkzV5l~B4-T~W8pr8OgXbyotKr6YH0WE8DrNUvlurTg5PyjPw2B~ums3sqGolVpzLpylGwOLpWuk6KMwgx2wYoVUvoFtJ4sh42upjm9z--CoFcmktIGkDDofQq3vtK10v~Zhs0b07bfK2g5X1vp3uoV6D1OnSzeHEFQcAVlnC4oXGBfMRDVV4uPHLwCOR8bb-dSMTDSqjbicBYhJJPpA__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4"
+                  src="./jpg/5.jpg"
                   alt="Yellow-blue painting with yellow crayon."
                 />
                 <div class="web__client-matters-box-column-photo-tag">
